<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- bg -->
    <ImageView
        android:id="@+id/bgAddonDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/mainbg"
        android:scaleType="centerCrop"
        android:contentDescription="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="430dp"
        android:layout_height="430dp"
        android:src="@drawable/logo_black"
        android:scaleType="fitCenter"
        android:contentDescription="@null"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:id="@+id/scrollAddonDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@drawable/glass">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="22dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/imgAddonDetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@null"/>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvAddonTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Title"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="22dp"/>

            <TextView
                android:id="@+id/tvAddonPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usd"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#2E7D32"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/tvAddonDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:textSize="14sp"
                android:textColor="#444444"
                android:layout_marginTop="10dp"
                android:lineSpacingExtra="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/key"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="26dp"/>

            <TextView
                android:id="@+id/tvAddonFeatures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feat"
                android:textSize="14sp"
                android:textColor="#444444"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="6dp"/>

            <Button
                android:id="@+id/btnAddAddon"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:text="@string/ad"
                android:letterSpacing="0.1"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="24sp"
                android:background="@drawable/bg_button_glow"
                android:backgroundTint="@null"
                app:backgroundTint="@null"
                android:textColor="@color/white"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>